--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -1,4 +1,11 @@
 {
+  "alerts":{
+    "apiError": "Something went wrong, try creating an image shortly",
+    "fewAttemptsLeft": "You have {remainingPrompts} cool images left to create today. Let your imagination run wild! 🌈",
+    "promptLimit": "You can only create 5 more images today",
+    "missingFields": "Some fields are missing, check and try again.",
+    "zeroAttempts": "You've reached your daily limit of creating cool images. Don't worry, you can create more amazing pictures tomorrow!"
+  },
   "button":{
     "text":"Click me"
 },
